--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 install:
   - docker pull maximbaz/arch-build-aur
 script:
+  - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c 'echo $PATH'
   - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c '/build-aur webkitgtk'
 deploy:
   provider: releases
