fix: try setting PATH

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ services:
 install:
   - docker pull maximbaz/arch-build-aur
 script:
-  - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c 'echo $PATH'
+  # Remove /usr/sbin to fix "ImportError: cannot import name 'codegen_main'"
+  - export PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/sbin:/bin:/snap/bin
   - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c '/build-aur webkitgtk'
 deploy:
   provider: releases
