--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - docker pull maximbaz/arch-build-aur
 script:
 script:
-  - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c 'echo $PATH'
+  - docker run --rm --env PATH=/tmp -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c 'echo $PATH'
   - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c '/build-aur webkitgtk'
 deploy:
   provider: releases
