--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,13 @@ notifications:
   email: false
 services:
   - docker
-env:
-  global:
-    - MAKEFLAGS="-j 2"
 install:
   - docker pull maximbaz/arch-build-aur
 script:
 script:
   # Remove /usr/sbin from default PATH to fix "ImportError: cannot import name 'codegen_main'"
-  - docker run --rm --env PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/sbin:/bin -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c 'echo $PATH && env'
-  - docker run --rm -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c '/build-aur webkitgtk'
+  # Use all available CPU cores, see: https://docs.travis-ci.com/user/speeding-up-the-build/#Makefile-optimization
+  - docker run --rm --env PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/sbin:/bin --env MAKEFLAGS="-j 2" -v $(pwd):/pkg maximbaz/arch-build-aur /bin/bash -c '/build-aur webkitgtk'
 deploy:
   provider: releases
   api_key: "$GH_TOKEN"
